--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "vocabluary",
   "version": "0.1.0",
+  "homepage": "https://seruy50.github.io/vocabluary",
   "private": true,
   "dependencies": {
+    "@fontsource/aboreto": "^4.5.1",
+    "@fontsource/open-sans": "^4.5.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
